# MineCollect

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: notes.mdc
.pm/: arch.md  main.kanban  tech-spec.md
.pm/0-planning/: arch.md  channels.md  design.md  dev-plan.md  ideas.md  ingestion.md  tech-spec.md  tools.md  ui-spec.md  uri-schema.txt
.pm/5-logs/: 2025-06-14.md
apps/web/: README.md  index.html  next.config.mjs  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
apps/web/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/app/sources/[id]/: loading.tsx  page.tsx
apps/web/src/: App.tsx
apps/web/src/components/: layout.tsx
apps/web/src/lib/: db.ts
apps/web/src/pages/: source-detail.tsx  sources.tsx
backend/: README.md  __init__.py  env.example  main.py  pyproject.toml
backend/db/: __init__.py  config.py  example_usage.py  migrate.py  schema.py
backend/engine/: __init__.py  demo.py  document_processor.py  main.py  qa_pipeline.py
backend/tests/: __init__.py  test_api.py
docker/postgres/: init.sql
scripts/: insert-sample-data.js  trello_connector.py
